# zk-nft

anchor/: .gitignore  Anchor.toml  package.json
anchor/programs/zk-nft/: Cargo.toml
anchor/programs/zk-nft/src/: errors.rs  lib.rs
anchor/programs/zk-nft/src/processor/: create_asset.rs  create_group.rs  transfer.rs
anchor/programs/zk-nft/src/state/: asset_data.rs  base_data.rs  group.rs
anchor/tests/: zk-nft.ts
