[package]
name = "zk-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_nft"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = ["light-heap"]
default = ["custom-heap", "idl-build", "cpi-context"]
test-sbf = []
cpi-context = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
light-system-program = { version = "1.0.0", features = ["cpi"] }
account-compression = { version = "1.0.0", features = ["cpi"] }
light-hasher = { version = "1.0.0" }
light-sdk = { version = "0.8.0" }
light-utils = { version = "1.0.0" }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
light-heap = { version = "1.0.0", optional = true }
light-macros = "1.0.0"
light-sdk-macros = "0.1.0"
borsh = "0.10"
